package com.mxdl.desigin.pattern.structure.a04_face.contract;

/**
 * Description: <ICook><br>
 * Author:      mxdl<br>
 * Date:        2019/12/29<br>
 * Version:     V1.0.0<br>
 * Update:     <br>
 */
public interface ICook {
    void cooking();
}
